fix drag on mobile

--- a/app/globals.css
+++ b/app/globals.css
@@ -2,18 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-.canvas-wrapper {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-}
-
 svg {
   position: fixed;
+  background-color: #35654d;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+  touch-action: none;
 }
